<resources>
    <string name="app_name">Waves Of Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="design_by_jadoun_tech_solution_pvt_ltd">Design by Jadoun Tech Solution Pvt. Ltd</string>
    <string name="design_by_jadoun_ntech_solution_pvt_ltd">Design by Jadoun \nTech Solution Pvt. Ltd</string>
    <string name="enjoy_restaurent_quality_meal_nat_home">Enjoy Restaurent Quality Meal \nat Home</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_quality_meal_n_at_home">Enjoy Restaurant Quality Meal\n at Home</string>
    <string name="login_to_you_account">Login To You Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or_n_continue_with">or \n Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience_quot">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="popular">Popular</string>
    <string name="viewmore">ViewMore</string>
    <string name="view_more">View More</string>
    <string name="food_name">Food Name</string>
    <string name="restaurent_name">Restaurent Name</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_7">$7</string>
    <string name="proceed">Proceed</string>
    <string name="p">+</string>
    <string name="_1">1</string>
    <string name="n">-</string>
    <string name="menu">Menu</string>
    <string name="view_menu">View Menu</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="edit">Edit\n\n</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="phone">Phone</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_my_order">Place My Order</string>
    <string name="_0123456789">0123456789</string>
    <string name="_5">$5</string>
    <string name="congrats_n_your_order_placed">Congrats\n Your Order Placed</string>
    <string name="go_home">Go Home</string>
    <string name="short_description">Short description</string>
    <string name="short_description_n_lorem_ipsum_dolor_sit_amet_n_consectetur_adipiscing_elit_n_sed_do_eiusmod_tempor_incididunt_n_ut_labore_et_dolore_magna_aliqua_ut_enim_ad">Short description\n Lorem ipsum dolor sit amet,\n consectetur adipiscing elit,\n sed do eiusmod tempor incididunt\n ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="ingredients">Ingredients</string>
    <string name="strowberry_n_cream_n_wheat">Strowberry\n Cream\n wheat</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="previously_buy">Previously buy</string>
    <string name="buy_again">Buy Again</string>
    <string name="email">Email</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="save_information">Save Information</string>
    <string name="hello_lorem_ipsum">Hello, lorem ipsum</string>
    <string name="notification">Notification</string>
    <string name="abc">Abc</string>
</resources>