<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.PayOutActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="369dp"
        android:src="@drawable/icon_back" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="47dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_color"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pay_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="text"
            android:text="@string/enter_your_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pay_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="text"
            android:text="@string/enter_your_address" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pay_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:text="@string/_0123456789" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pay_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/tvPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/payment_method"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="106dp"
            android:layout_height="52dp"
            android:src="@drawable/cashondelivery_1"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/pay_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/total_amount"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:paddingStart="170dp"
            android:text="@string/_5" />
    </LinearLayout>

</LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlaceOrder"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
       android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:text="@string/place_my_order"
        />

</FrameLayout>