<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/pay_text_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="text"
                android:hint="@string/abc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/pay_text_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="text"
                android:hint="@string/address" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/pay_text_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:hint="@string/_0123456789"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/pay_text_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:hint="@string/abc_gmail_com" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveInformation"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:background="@drawable/button_background"
        android:text="@string/save_information"
        />

</FrameLayout>